--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-01.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-01.html
@@ -4,7 +4,6 @@
 <link rel="stylesheet" type="text/css" href="../css/global.css">
 
 <script src="../js/glaemscribe.min.js"></script>
-<script src="../js/tengwar_ds.cst.js"></script>
 <script src="../js/tengwar_ds_eldamar.cst.js"></script>
 <script src="../js/quenya.glaem.js"></script>
 <script src="../js/sindarin-beleriand.glaem.js"></script>
@@ -119,7 +118,7 @@
 <li><i>aiwë</i> “bird” → <i>aiwi</i> “birds”</li>
 </ul>
 
-<p>The various kinds of noun plurals are covered in more detail starting in <a href="eldamo-intro-quenya-04.html">Chapter 4</a>.</p>
+<p>The various kinds of noun plurals are covered in more detail starting in <a href="eldamo-intro-quenya-04.html#c4-2-1">Chapter 4, §4.2.1</a>.</p>
 
 <p><a id="c1-2-1-2"></a><b><u>1.2.1.2 Word for “The”:</u></b> The Quenya word for “the” is <i>i</i>. In technical terms, <i>i</i> “the” is called the definite article. Quenya does not have a word for “a, an”, which is the English indefinite article. If a Quenya word is not preceded by <i>i</i>, it can be considered indefinite.</p>
 
@@ -158,7 +157,7 @@
 
 <ul>
 <li>Note ¹: A <i>c</i> in Quenya is always pronounce like a “hard c” in English, so <i>cir-</i> is pronounced “kir-” not “sir-”. Thus <i>cir-</i> “to cut” is <u>not</u> pronounced like English “circus”, and if <i>circus</i> was a Quenya word it would be pronounced “kirkus” (or more exactly “keerkoos”, see the next note). This is such a common mispronunciation that some writers of Quenya use <i>k</i> instead of <i>c</i> (as Tolkien himself did sometimes), but this course uses <i>c</i> because that’s what Tolkien did in <i>The Lord of the Rings</i>.</li>
-<li>Note ²: Vowels in Quenya are pronounced more or less like vowels in Italian: <i>i</i> = “ee”, <i>e</i> = “eh”, <i>a</i> = “ah”, <i>o</i> = “oh”, <i>u</i> = “oo”. Thus the verbs <i>cir-</i>, <i>men-</i>, <i>mat-</i>, <i>lor-</i>, <i>tuv-</i> are pronounced “k(ee)r-”, “m(eh)n-”, “m(ah)t-”, “l(oh)r-”, “t(oo)v-”. More information on pronunciation appears in <a href="eldamo-intro-quenya-02.html">Chapter 2</a>.</li>
+<li>Note ²: Vowels in Quenya are pronounced more or less like vowels in Italian: <i>i</i> = “ee”, <i>e</i> = “eh”, <i>a</i> = “ah”, <i>o</i> = “oh”, <i>u</i> = “oo”. Thus the verbs <i>cir-</i>, <i>men-</i>, <i>mat-</i>, <i>lor-</i>, <i>tuv-</i> are pronounced “k(ee)r-”, “m(eh)n-”, “m(ah)t-”, “l(oh)r-”, “t(oo)v-”. More information on pronunciation appears in <a href="eldamo-intro-quenya-02.html#c2-1">Chapter 2, §2.1</a>.</li>
 </ul>
 
 <p>All the words above belong to a class of Quenya verbs called “basic verbs”; other verb classes will be covered later in the course. Like most languages, Quenya has a variety of verb tenses, generally related to time. The major Quenya verb tenses are the aorist, present, future, past and perfect. Quenya tenses are formed by adding suffixes and sometimes by modifying the base vowel of the verb (the vowel in the verb stem). Further suffixes, like those for pronouns, are then added to the tense form.</p>
@@ -193,7 +192,7 @@
 
 <p>In the last two sentences, the verb forms <i>tirir</i> and <i>matir</i> are plural to agree with the plural subjects <i>naucor</i> “dwarves” and <i>orcor</i> “orcs”.</p>
 
-<p><a id="c1-2-2-3"></a><b><u>1.2.2.3 Present Tense:</u></b> The present tense in Quenya is used for actions going on in the current time (now). The Quenya present tense is roughly equivalent to the English present continuous tense: “is running”. For basic verbs, the present tense is formed by (a) lengthening the base vowel and (b) adding the suffix <i>-a</i>: <i>nor-</i> “to run” → <i>nóra</i> “is running”. Long vowels in Quenya are marked with an accent <i>´</i> (<i>í, é, á, ó, ú</i>) and are mostly pronounced like short vowels, except held longer; there is more information on pronunciation in <a href="eldamo-intro-quenya-02.html">Chapter 2</a>. Some examples of present tense usage:</p>
+<p><a id="c1-2-2-3"></a><b><u>1.2.2.3 Present Tense:</u></b> The present tense in Quenya is used for actions going on in the current time (now). The Quenya present tense is roughly equivalent to the English present continuous tense: “is running”. For basic verbs, the present tense is formed by (a) lengthening the base vowel and (b) adding the suffix <i>-a</i>: <i>nor-</i> “to run” → <i>nóra</i> “is running”. Long vowels in Quenya are marked with an accent <i>´</i> (<i>í, é, á, ó, ú</i>) and are mostly pronounced like short vowels, except held longer; there is more information on pronunciation in <a href="eldamo-intro-quenya-02.html#c2-1">Chapter 2, §2.1</a>. Some examples of present tense usage:</p>
 
 <ul>
 <li><i>elen síla</i> “a star is shining”</li>
@@ -204,7 +203,7 @@
 
 <p>Compare the last example to <i>i atani norir</i> “the men run [aorist]”. While the aorist tense is ambiguous as to when men run (it could be at any time, or habitually), the present tense specifies that the men are in the process of running <u>now</u>.</p>
 
-<p>More information on the present tense also appears in <a href="eldamo-intro-quenya-02.html">Chapter 2</a>.</p>
+<p>More information on the present tense also appears in <a href="eldamo-intro-quenya-02.html#c2-2-3">Chapter 2, §2.2.3</a>.</p>
 
 <p><a id="c1-2-2-4"></a><b><u>1.2.2.4 Future, Past, Perfect:</u></b> The remaining tenses are not covered in detail in this chapter, but briefly they are formed as follows:</p>
 
@@ -216,7 +215,7 @@
 
 <p>The past tense “incorporates” the past suffix <i>-në</i> in complex ways. For example, sometimes the <i>n</i> is inserted into the middle of the verb stem instead of added at the end: <i>mat-</i> “to eat” → <i>mantë</i> “ate”. As for the perfect, for now you can think of it as another way of talking about the past, but specifically for <u>completed</u> actions: <i>i orco mantë i aiwë</i> “the orc ate the bird (at some point in the past)” vs. <i>i orco amátië i aiwë</i> “the orc has eaten the bird (and is done eating it)”.</p>
 
-<p>The past and perfect are quite complicated and will be covered in more detail in <a href="eldamo-intro-quenya-04.html">Chapter 4</a> and <a href="eldamo-intro-quenya-05.html">Chapter 5</a>, while the future is covered in <a href="eldamo-intro-quenya-03.html">Chapter 3</a>. For now you just need to be aware these tenses exist.</p>
+<p>The past and perfect are quite complicated and will be covered in more detail in <a href="eldamo-intro-quenya-04.html#c4-4">Chapter 4, §4.4</a> and <a href="eldamo-intro-quenya-05.html#c5-4">Chapter 5, §5.4</a>, while the future is covered in <a href="eldamo-intro-quenya-03.html#c3-4-1">Chapter 3, §3.4.1</a>. For now you just need to be aware these tenses exist.</p>
 
 <p><a id="c1-2-2-5"></a><b><u>1.2.2.5 Section Summary:</u></b> This summary covers both this and the previous section.</p>
 
@@ -287,7 +286,7 @@
 <li><i>Eldar ménar.</i></li>
 </ol>
 
-<p>Here are the answers to questions 9-16 in Elvish letters, called <i>tengwar</i>. These letters aren’t covered until <a href="eldamo-intro-quenya-04.html">Chapter 4</a> of this course, so if you are reading Chapter 1 for the first time then tengwar writing is optional. After you learn tengwar, you may want to repeat these exercises using Elvish letters for extra practice.</p>
+<p>Here are the answers to questions 9-16 in Elvish letters, called <i>tengwar</i>. These letters aren’t covered until <a href="eldamo-intro-quenya-04.html#c4-1">Chapter 4, §4.1</a> of this course, so if you are reading Chapter 1 for the first time then tengwar writing is optional. After you learn tengwar, you may want to repeat these exercises using Elvish letters for extra practice.</p>
 
 <ol class="exercise-list tengwar-block" start="9">
 <li><span class="transcribe" data-lang="q" data-value="Samin aiwë">Samin aiwë</span></li>
@@ -396,11 +395,11 @@
 <li><i>círasses</i> (<i>círa-sse-s</i>) “he/she is cutting him/her”</li>
 </ul>
 
-<p>The last example is a bit awkward with the “double <i>se</i>” (<i>ssë</i> + <i>s</i>), and in such cases it may be clearer to use an independent pronoun for the object: <i>círas se</i> “he/she is cutting him/her”. This is always acceptable, and can even be preferable when the object must be emphasized: <i>círas sé</i> “he/she cuts <u>him</u> (or her)”. Direct objects will be discussed in more detail in <a href="eldamo-intro-quenya-04.html">Chapter 4</a>.</p>
+<p>The last example is a bit awkward with the “double <i>se</i>” (<i>ssë</i> + <i>s</i>), and in such cases it may be clearer to use an independent pronoun for the object: <i>círas se</i> “he/she is cutting him/her”. This is always acceptable, and can even be preferable when the object must be emphasized: <i>círas sé</i> “he/she cuts <u>him</u> (or her)”. Direct objects will be discussed in more detail in <a href="eldamo-intro-quenya-04.html#c4-3-2">Chapter 4, §4.3.2</a>.</p>
 
 <p><a id="c1-2-3-5"></a><b><u>1.2.3.5 Reading Practice, Aragorn’s Cry:</u></b> We now have enough information to translate our first “real” Quenya sentence, one written by Tolkien himself! It is a sentence of only a single word: <i>utúvienyes</i> “I have found it”, Aragorn’s cry when he found the White Tree of Gondor (<i>The Lord of the Rings</i>, Book 6, Chapter 5: The Steward and the King).</p>
 
-<p>The basic verb in this phrase is <i>tuv-</i> “to find”. This verb is in its perfect tense form <i>utúvië</i> “has/have found”, indicating the act of finding is complete (the perfect was mentioned briefly above, and is covered in more detail in <a href="eldamo-intro-quenya-05.html">Chapter 5</a>). The subject is <i>-nyë</i> “I” and the object is <i>-s</i> “it”. Broken into its constituent elements, the phrase is:</p>
+<p>The basic verb in this phrase is <i>tuv-</i> “to find”. This verb is in its perfect tense form <i>utúvië</i> “has/have found”, indicating the act of finding is complete (the perfect was mentioned briefly above, and is covered in more detail in <a href="eldamo-intro-quenya-05.html#c5-4">Chapter 5, §5.4</a>). The subject is <i>-nyë</i> “I” and the object is <i>-s</i> “it”. Broken into its constituent elements, the phrase is:</p>
 
 <ul>
 <li><i>utúvie-nye-s</i> “(have found)-I-it”</li>
@@ -426,7 +425,7 @@
 <li>The object suffixes are <i>-s</i> “him/her” and <i>-t</i> “them”. If added to an aorist verb, the aorist tense vowel remains <i>e</i> rather than becoming <i>i</i> as usual with suffixes. If added to a subject suffix, the long suffix form must be used.</li>
 </ul>
 
-<p>There will be more pronouns given in <a href="eldamo-intro-quenya-03.html">Chapter 3</a>.</p>
+<p>There will be more pronouns given in <a href="eldamo-intro-quenya-03.html#c3-2">Chapter 3, §3.2</a>.</p>
 
 <h2><a id="x1-2"></a>Exercise 1.2</h2>
 
@@ -679,28 +678,30 @@
 
 <ul class="vocab-list">
 <li><b>et</b> <i>prep.</i> “out (of)”</li>
-<li><b>mi</b> <i>prep.</i> “in”</li>
+<li><b>mi</b> <i>prep.</i> “in” ¹</li>
 <li><b>nu</b> <i>prep.</i> “under, beneath”</li>
 <li><b>or</b> <i>prep.</i> “above”</li>
 <li><b>ve</b> <i>prep.</i> “as, like”</li>
-<li><b>ú</b> <i>prep.</i> “without” ¹</li>
+<li><b>ú</b> <i>prep.</i> “without” ²</li>
 </ul>
 
 <ul>
-<li>Note ¹: This preposition requires the genitive noun case, which will be explained shortly.</li>
+<li>Note ¹: When preceding the definite article <i>i</i> (<i>mi i</i>), this preposition simplifies to <i>mí</i> “in the”.</li>
+<li>Note ²: This preposition requires the genitive noun case, which will be explained shortly.</li>
 </ul>
 
 <p>For example:</p>
 
 <ul class="exercise-list">
-<li><i>nu menel</i> “under the heavens” ²</li>
-<li><i>mi rotto</i> “in a cave”</li>
-<li><i>et i mindon</i> “out of the tower”</li>
 <li><i>or ambo</i> “above a hill”</li>
+<li><i>et i mindon</i> “out of the tower”</li>
+<li><i>mi rotto</i> “in a cave”</li>
+<li><i>mí rotto</i> “in the cave”</li>
+<li><i>nu menel</i> “under the heavens” ³</li>
 </ul>
 
 <ul>
-<li>Note ²: You might wonder why this phrase has <i>menel</i> and not <i>i menel</i>. That’s because Quenya does not use <i>i</i> “the” before nouns that are obviously unique, like the sky, sun, moon, etc. The special ways that Quenya uses the definite article <i>i</i> will be discussed in <a href="eldamo-intro-quenya-06.html">Chapter 6</a>.</li>
+<li>Note ³: You might wonder why this phrase has <i>menel</i> and not <i>i menel</i>. That’s because Quenya does not use <i>i</i> “the” before nouns that are obviously unique, like the sky, sun, moon, etc. The special ways that Quenya uses the definite article <i>i</i> will be discussed in <a href="eldamo-intro-quenya-06.html">Chapter 6</a>.</li>
 </ul>
 
 <p><a id="c1-2-5-1"></a><b><u>1.2.5.1 Noun Cases:</u></b> Quenya has another way of expressing the role of a noun in a sentence: the noun cases. Modern English doesn’t really have noun cases (the closest it comes is the possessive suffix: ’s), but many other languages do. Quenya has seven major noun cases, each with a specific suffix.</p>
@@ -834,7 +835,7 @@
 </ol>
 
 <ul>
-<li>Note ¹: The ambiguity of phrases like <i>i hesto atanion ú macilo</i> “the captain of men [is] without a sword” (which could also just mean “the captain of men without a sword”) is such that the normally optional verb <i>ná</i> “is” might be reintroduced: <i>i hesto atanion ná ú macilo</i>. This use of <i>ná</i> is discussed in <a href="eldamo-intro-quenya-02.html">Chapter 2</a>.</li>
+<li>Note ¹: The ambiguity of phrases like <i>i hesto atanion ú macilo</i> “the captain of men [is] without a sword” (which could also just mean “the captain of men without a sword”) is such that the normally optional verb <i>ná</i> “is” might be reintroduced: <i>i hesto atanion ná ú macilo</i>. This use of <i>ná</i> is discussed in <a href="eldamo-intro-quenya-02.html#c2-3">Chapter 2, §2.3</a>.</li>
 </ul>
 
 <ol class="exercise-list" start="7">
@@ -1105,7 +1106,7 @@ Star (is shining) hour-to meeting-our-of
 
 <blockquote>A star shines on the hour of our meeting.</blockquote>
 
-<p>This illustrates some differences between Quenya and English. The English simple present (“shines”) and present continuous (“is shining”) both refer to the present time, and the Quenya present tense (<i>síla</i>) may be translated with either of these in English, whichever sounds more natural. The reverse is not true, however: the English present continuous tense “is shining” may only be translated with the Quenya present tense <i>síla</i>, since it implies an ongoing action which requires the Quenya present. We will discuss this further when we revisit the present tense in <a href="eldamo-intro-quenya-03.html">Chapter 3</a>.</p>
+<p>This illustrates some differences between Quenya and English. The English simple present (“shines”) and present continuous (“is shining”) both refer to the present time, and the Quenya present tense (<i>síla</i>) may be translated with either of these in English, whichever sounds more natural. The reverse is not true, however: the English present continuous tense “is shining” may only be translated with the Quenya present tense <i>síla</i>, since it implies an ongoing action which requires the Quenya present. We will discuss this further when we revisit the present tense in <a href="eldamo-intro-quenya-02.html#c2-2-3">Chapter 2, §2.2.3</a>.</p>
 
 <p>Tolkien’s English translation also includes the indefinite article “a” as in “a star”, but you may be surprised to see “the hour” rather than “an hour”. That’s because Quenya doesn’t use its definite article <i>i</i> the same way as English uses “the”. We have already seen one example of this, in the word <i>menel</i> “the sky”. English typically uses “the” with unique things like “the sky, the Sun, the Moon”, but Quenya does not, and so has <i>menel</i> but not **<i>i menel</i>. Likewise, omitting “the” in the phrase “on the hour of our meeting” sounds awkward in English, but Quenya omits <i>i</i> in this circumstance. If you rearranged the phrase a bit and said “on our meeting’s hour”, English <u>would</u> omit “the”. In general, Quenya uses its definite article <i>i</i> less often than English uses “the”. We will discuss the topic of the definite article in <a href="eldamo-intro-quenya-06.html">Chapter 6</a>.</p>
 
@@ -1114,7 +1115,7 @@ Star (is shining) hour-to meeting-our-of
 <p>As for the Elvish phrase itself, what Tolkien <u>actually</u> wrote in <i>The Lord of the Rings</i> was <i>Elen síla lúmenn’ omentielvo</i>, with <i>lúmenn’</i> rather than <i>lúmenna</i>. This is because when a Quenya word ends in a weaker vowel like <i>a</i> or <i>ë</i>, and the following word begins with a vowel, the final weak vowel is sometimes dropped in speech through a process called elision. The dropped vowel is generally retained in spelling, except perhaps in written poetry where dropping the vowel may be useful for achieving a particular poetic meter (and also in prose representations of speech like in Frodo’s greeting). This and other changes to vowels as pronounced in speech are examined in <a href="eldamo-intro-quenya-06.html">Chapter 6</a>.</p>
 
 <div class="advanced-topic">
-<p><b>Advanced Topic:</b> One final thing of note is that there is another variation of the phrase in the first edition of <i>The Lord of the Rings</i>, where it was <i>elen síla lúmenn’ omentielmo</i>, with <i>omentie<u>lmo</u></i> rather than <i>omentie<u>lvo</u></i>. The reason for this difference is not a linguistic one: when Tolkien wrote the first edition of LotR, he imagined the possessive suffix “our” was <i>-lma</i>. In between the first and second edition, he changed his mind and decided it should be <i>-lva</i> instead. This demonstrates an important issue in the study of the Elvish languages: they were not fixed in Tolkien’s mind, and he made various adjustments to the grammar and other features of the languages over the six or so decades that he worked on them over his lifetime. These conceptual changes to the languages will be discussed as an advanced topic in <a href="eldamo-intro-quenya-02.html">Chapter 2</a>.</p>
+<p><b>Advanced Topic:</b> One final thing of note is that there is another variation of the phrase in the first edition of <i>The Lord of the Rings</i>, where it was <i>elen síla lúmenn’ omentielmo</i>, with <i>omentie<u>lmo</u></i> rather than <i>omentie<u>lvo</u></i>. The reason for this difference is not a linguistic one: when Tolkien wrote the first edition of LotR, he imagined the possessive suffix “our” was <i>-lma</i>. In between the first and second edition, he changed his mind and decided it should be <i>-lva</i> instead. This demonstrates an important issue in the study of the Elvish languages: they were not fixed in Tolkien’s mind, and he made various adjustments to the grammar and other features of the languages over the six or so decades that he worked on them over his lifetime. These conceptual changes to the languages will be discussed as an advanced topic in <a href="eldamo-intro-quenya-02.html#c2-7">Chapter 2, §2.7</a>.</p>
 </div>
 
 <h1><a id="c1-5"></a>1.5 Chapter Summary</h1>
@@ -1221,7 +1222,7 @@ Star (is shining) hour-to meeting-our-of
 <li><b>et</b> <i>prep.</i> “out (of)”</li>
 <li><b>hya</b> <i>conj.</i> “or”</li>
 <li><b>mal</b> <i>conj.</i> “but”</li>
-<li><b>mi</b> <i>prep.</i> “in”</li>
+<li><b>mi</b> <i>prep.</i> “in” ¹</li>
 <li><b>nu</b> <i>prep.</i> “under, beneath”</li>
 <li><b>or</b> <i>prep.</i> “above”</li>
 <li><b>ve</b> <i>prep.</i> “as, like”</li>
@@ -1229,6 +1230,7 @@ Star (is shining) hour-to meeting-our-of
 </ul>
 
 <ul>
+<li>Note ¹: When preceding the definite article <i>i</i> (<i>mi i</i>), this preposition simplifies to <i>mí</i> “in the”.</li>
 <li>Note ²: This preposition requires the genitive noun case.</li>
 </ul>
 
