--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-03.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-03.html
@@ -4,7 +4,6 @@
 <link rel="stylesheet" type="text/css" href="../css/global.css">
 
 <script src="../js/glaemscribe.min.js"></script>
-<script src="../js/tengwar_ds.cst.js"></script>
 <script src="../js/tengwar_ds_eldamar.cst.js"></script>
 <script src="../js/quenya.glaem.js"></script>
 <script src="../js/sindarin-beleriand.glaem.js"></script>
@@ -272,7 +271,7 @@
 </ul></li>
 </ul>
 
-<p>The dative will be covered more thoroughly in <a href="eldamo-intro-quenya-05.html">Chapter 5</a>, and the instrumental in <a href="eldamo-intro-quenya-07.html">Chapter 7</a>.
+<p>The dative will be covered more thoroughly in <a href="eldamo-intro-quenya-05.html#c5-3">Chapter 5, §5.3</a>, and the instrumental in <a href="eldamo-intro-quenya-07.html">Chapter 7</a>.
 
 <h2><a id="c3-1-4"></a>3.1.4 Section Summary</h2>
 
@@ -339,7 +338,7 @@
 <li><i>Yallen yeldenya ómanyanen.</i></li>
 </ol>
 
-<p>Translate the following from English to Quenya:</p>
+<p>Translate the following to Quenya:</p>
 
 <ol class="exercise-list" start="21">
 <li><i>I am naming my son Miro</i></li>
@@ -479,7 +478,7 @@
 </center>
 
 <ul>
-<li>Note ¹: The singular pronouns have both short and long forms, as indicated by the parenthesis. Both <i>matin</i> and <i>matinyë</i> “I eat” are acceptable, but the short forms are more common. The main exception is 2nd sg. familiar, where long <i>-tyë</i> is more common, to avoid conflict with object suffixes (discussed in <a href="eldamo-intro-quenya-04.html">Chapter 4</a>) and dual suffixes (discussed in <a href="eldamo-intro-quenya-05.html">Chapter 5</a>).</li>
+<li>Note ¹: The singular pronouns have both short and long forms, as indicated by the parenthesis. Both <i>matin</i> and <i>matinyë</i> “I eat” are acceptable, but the short forms are more common. The main exception is 2nd sg. familiar, where long <i>-tyë</i> is more common, to avoid conflict with object suffixes (discussed in <a href="eldamo-intro-quenya-04.html#c4-3-2-2">Chapter 4, §4.3.2.2</a>) and dual suffixes (discussed in <a href="eldamo-intro-quenya-05.html#c5-2">Chapter 5, §5.2</a>).</li>
 <li>Note ²: Tolkien used another 3rd plural pronoun <i>-ltë</i> about as often he used <i>-ntë</i>, so much so that it is impossible to determine which Tolkien preferred. This course uses <i>-ntë</i> for “they”, but you will likely see <i>-ltë</i> in Quenya writing just as often. Its inanimate equivalent is (probably) <i>-lta</i>.</li>
 </ul>
 
@@ -573,7 +572,7 @@
 
 <h2><a id="x3-2"></a>Exercise 3.2</h2>
 
-<p>Translate the following from Quenya to English:</p>
+<p>Translate the following to English:</p>
 
 <ol class="exercise-list">
 <li><i>Liltëaldë i ambossen.</i></li>
@@ -584,7 +583,7 @@
 <li><i>Lírelvar lairi eldaron nár, ar nanta márë.</i></li>
 </ol>
 
-<p>Translate the following from English to Quenya:</p>
+<p>Translate the following to Quenya:</p>
 
 <ol class="exercise-list" start="7">
 <li>His pen was swift and it danced on the paper.</li>
@@ -728,7 +727,7 @@
 
 <h2><a id="x3-3"></a>Exercise 3.3</h2>
 
-<p>Translate the following from Quenya to English:</p>
+<p>Translate the following to English:</p>
 
 <ol class="exercise-list">
 <li><i>Aiya. Ma técal parma?</i></li>
@@ -739,7 +738,7 @@
 <li><i>Hantan lyen. Márienna.</i></li>
 </ol>
 
-<p>Translate the following from English to Quenya:</p>
+<p>Translate the following to Quenya:</p>
 
 <ol class="exercise-list" start="7">
 <li>(Stay) in happiness. It is good that you came, sir.</li>
@@ -824,14 +823,14 @@
 
 <p>It is also possible for an imperative statement be made with just a bare aorist verb: <i>tulë</i> “come”. This is less common in modern Quenya, except with the verb <i>ná</i>: <i>na márië</i> “be well” (PE17/59, 74), <i>na airë esselya</i> “hallowed be thy name, (lit.) be holy name-thy (<i>esse-lya</i>)” (VT43/12). The second of these is an indirect imperative, one where the “commanded” party is not present and is generally in the 3rd person. Such indirect imperatives are possible with the particle <i>á</i> as well: <i>á vala Manwë</i> “may Manwë order it” (WJ/404), except that the subject follows the verb. If there is an object, this in turn follows the subject: <i>á mate i Elda massa</i> “let the Elf eat bread” (I command that the Elf be allowed to eat bread).</p>
 
-<!--
 <p>Indirect imperatives may include a subject pronoun, which is suffixed to the <i>á</i>: <i>áse tulë</i> “let him come” (note: the suffix is <i>-se</i> rather than the usual <i>-ssë</i> due to stress rules which will be discussed in <a href="eldamo-intro-quenya-06.html">Chapter 6</a>). It is possible (though rare) for the 2nd sg. pronoun <i>lye</i> to be used this way: <i>ályë tulë</i> “come (you)”. If the pronoun (or noun) in the indirect command is plural, then the verb is also plural: <i>áldë tulir</i> “come (you all)”, <i>ántë tulir</i> “let them come”, <i>á tulir i atani</i> “let the men come”. Where there is subject noun for an indirect imperative (<i>i atani</i>), it follows rather than preceding the verb.</p>
--->
 
-<p>Just because <i>á</i> is used for commands doesn’t mean it is overbearing in tone, any more than it is overbearing to say “help me out” in English. However, various formations can be used to soften the tone of a command, especially the word <i>mecin</i> “please”, just like in English: <i>á tulë, mecin</i> “come, please” (PE22/166). Also like English, a question can be used in place of a command to further soften the request: <i>ma tuluval enar, mecin</i> “will you come tomorrow, please?” (PE22/106).</p>
+<p>Just because <i>á</i> is used for commands doesn’t mean it is overbearing in tone, any more than it is overbearing to say “help me out” in English. However, various formations can be used to soften the tone of a command, especially the word <i>mecin</i> “please”, just like in English: <i>á tulë, mecin</i> “come, please” (PE22/166). Also like English, a question can be used in place of a command to further soften the request: <i>ma tuluvalyë enar, mecin</i> “will you come tomorrow, please?” (PE22/106).</p>
 
 <div class="advanced-topic">
 <p><a id="c3-4-2-1"></a><b>3.4.2.1 How do we know this?</b> The discussion above on imperatives draws from several sources. The most complete discussion of the imperative appears in the <i>Common Eldarin: Verb Structure</i> from the early 1950s (PE22/139-140). Strictly speaking, this discussion is about ancient Elvish, not Quenya, but a similar discussion appears in <i>Quenya Verbal System</i> (PE22/105-106) which indicates these ancient formations still apply to modern Quenya. The note on stress for suffixed imperatives is drawn from a single example: “<i>avá</i> stressed on the last syllable” (WJ/371), but it seems reasonable to assume this stress pattern applies to other suffixed imperatives.</p>
+
+<p>The system of indirect imperatives described above is also from <i>Common Eldarin: Verb Structure</i>, and there are some indications that Tolkien used a system like this in early iterations of Quenya prayers of the early 1950s, in phrases like <i>Alye anta men siare ilyarea mastamma</i> “[let you] give us today our daily bread” (VT43/10-11). There is some evidence that Tolkien abandoned the addition of subject suffixes to the imperative particle <i>á</i> in the late 1950s, since this phrase (and other similar phrases) became <i>Ámen anta síra ilaurëa massamma</i> (VT43/12), where the <u>object</u> pronoun <i>men</i> was suffixes to <i>á</i> instead. We don’t know what the new system of indirect imperatives might have looked like, but one possibility is that the imperative particle <i>á</i> is just added to a declarative phrase: <i>tulis</i> “he comes” → <i>á tulis</i> “let him come”.</p>
 </div>
 
 <h2><a id="c3-4-3"></a>3.4.3 Wishes</h2>
@@ -857,7 +856,7 @@
 <p>While <i>nai</i> is used with the future, it is occasionally used with the present when wishing for a current state, as in <i>nai Eru mantëa tye</i> “may God bless you, (lit.) may it be that God is blessing you [now]”, with the verb <i>manta-</i> “to bless” (PE17/75). This “present wish” is especially common with “to be” statements, where the verb <i>ná</i> is usually omitted: <i>nai hínalya alassëa</i> “may your child [be] happy” (VT49/41). But <i>nai</i> is not used with past statements, since this veers into the realm of hypotheticals as discussed in <a href="eldamo-intro-quenya-11.html">Chapter 11</a>.</p>
 
 <div class="advanced-topic">
-<p><a id="c3-4-3-1"></a><b>3.4.3.1 How do we know this?</b> As with the discussion on imperatives, the above draws on several sources, but is based largely on an article on “Five Late Quenya Volitive Inscriptions” written by Carl Hostetter in 2007 where the <i>nai</i> construction was described by Hostetter in detail (VT49/38-48). This <i>nai</i> formation is one Tolkien used regularly, since he often included best wishes in Quenya when writing letters to others. Most of the examples above are drawn directly from Tolkien, with some adjustments to fit the vocabulary of this course. One of the examples, “may God bless you”, was originally written <i>nai Eru tye mánata</i> (PE17/75). I’ve rewritten it as <i>nai Eru mantëa tye</i>, because the original uses two constructs we haven’t talked about yet: direct object pronouns (<i>tye</i>) that precede the verb (discussed in <a href="eldamo-intro-quenya-04.html">Chapter 4</a>) and an archaic present tense <i>mánata</i> “is blessing” of talat-stem verbs (discussed in <a href="eldamo-intro-quenya-08.html">Chapter 8</a>).</p>
+<p><a id="c3-4-3-1"></a><b>3.4.3.1 How do we know this?</b> As with the discussion on imperatives, the above draws on several sources, but is based largely on an article on “Five Late Quenya Volitive Inscriptions” written by Carl Hostetter in 2007 where the <i>nai</i> construction was described by Hostetter in detail (VT49/38-48). This <i>nai</i> formation is one Tolkien used regularly, since he often included best wishes in Quenya when writing letters to others. Most of the examples above are drawn directly from Tolkien, with some adjustments to fit the vocabulary of this course. One of the examples, “may God bless you”, was originally written <i>nai Eru tye mánata</i> (PE17/75). I’ve rewritten it as <i>nai Eru mantëa tye</i>, because the original uses two constructs we haven’t talked about yet: direct object pronouns (<i>tye</i>) that precede the verb (discussed in <a href="eldamo-intro-quenya-04.html#c4-3-2-1">Chapter 4, §4.3.2.1</a>) and an archaic present tense <i>mánata</i> “is blessing” of talat-stem verbs (discussed in <a href="eldamo-intro-quenya-08.html">Chapter 8</a>).</p>
 </div>
 
 <h2><a id="c3-4-4"></a>3.4.4 Vocabulary: Directions and Times</h2>
@@ -934,7 +933,7 @@
 
 <h2><a id="x3-4"></a>Exercise 3.4</h2>
 
-<p>Translate the following from Quenya to English:</p>
+<p>Translate the following to English:</p>
 
 <ol class="exercise-list">
 <li><i>Á tulë i taurenna lúmessë andúnëo.</i></li>
@@ -945,7 +944,7 @@
 <li><i>Yá cenin Valinorenna, formen forya ar hyarmen hyarya.</i></li>
 </ol>
 
-<p>Translate the following from English to Quenya:</p>
+<p>Translate the following to Quenya:</p>
 
 <ol class="exercise-list" start="7">
 <li>May the dawn be warm for you (plural).</li>
