--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -10,7 +10,13 @@
 <p>[<a href="../index.html">Home</a>]</p>
 <hr>
 <h1>Version History</h1>
-<p>v0.8.4.1</p>
+<p>v0.8.4.2</p>
+<ul>
+<li>Minor release as I worked on Eldamo Introductory Quenya Chapters 1-6.</li>
+<li>Updated grammar entries to reflect my new preference for assimilative partitive plurals: <i>atanéli</i> &gt;&gt; <i>atalli</i>.</li>
+<li>Upgraded to Glaemscribe 1.3.1.</li>
+</ul>
+<p>v0.8.4.1 (October 14, 2022)</p>
 <ul>
 <li>Minor release to fix a build issue.</li>
 <li>Introduced spelling convention <i>öa</i> to make pronunciation clearer.</li>
